WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173574
Low memory notification shouldn't cause style recalc
https://bugs.webkit.org/show_bug.cgi?id=173574
Summary
Low memory notification shouldn't cause style recalc
Myles C. Maxfield
Reported
2017-06-19 18:14:44 PDT
Low memory notification shouldn't cause style recalc
Attachments
Patch
(7.14 KB, patch)
2017-06-19 18:55 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(8.27 KB, patch)
2017-06-19 20:46 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-elcapitan-wk2
(2.12 MB, application/zip)
2017-06-19 21:52 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews116 for mac-elcapitan
(2.87 MB, application/zip)
2017-06-19 22:08 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews100 for mac-elcapitan
(2.27 MB, application/zip)
2017-06-19 22:11 PDT
,
Build Bot
no flags
Details
Patch
(11.78 KB, patch)
2017-06-22 22:47 PDT
,
Myles C. Maxfield
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-elcapitan
(3.36 MB, application/zip)
2017-06-22 23:22 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews107 for mac-elcapitan-wk2
(1.96 MB, application/zip)
2017-06-22 23:52 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews114 for mac-elcapitan
(3.97 MB, application/zip)
2017-06-23 00:16 PDT
,
Build Bot
no flags
Details
patch
(21.08 KB, patch)
2017-07-05 09:29 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
patch
(20.72 KB, patch)
2017-07-05 10:54 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(10)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2017-06-19 18:55:34 PDT
Created
attachment 313350
[details]
Patch
Myles C. Maxfield
Comment 2
2017-06-19 18:56:10 PDT
<
rdar://problem/32616997
>
Simon Fraser (smfr)
Comment 3
2017-06-19 20:36:15 PDT
Comment on
attachment 313350
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=313350&action=review
> Source/WebCore/ChangeLog:23 > + No new tests because there is no observable behavior change.
But there is: no style recalls from a low memory warning. This should be testable (we expose style recaclc count to internals, and you can simulate low memory).
Myles C. Maxfield
Comment 4
2017-06-19 20:46:11 PDT
Created
attachment 313356
[details]
Patch
Build Bot
Comment 5
2017-06-19 21:52:23 PDT
Comment on
attachment 313356
[details]
Patch
Attachment 313356
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/3963980
New failing tests: printing/compositing-layer-printing.html printing/page-rule-in-media-query.html fast/css/font-face-default-font.html fast/css/scrollbar-dynamic-style-change.html printing/width-overflow.html printing/setPrinting.html fast/css/fontloader-tab-index.html
Build Bot
Comment 6
2017-06-19 21:52:25 PDT
Created
attachment 313362
[details]
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 7
2017-06-19 22:08:32 PDT
Comment on
attachment 313356
[details]
Patch
Attachment 313356
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3963983
New failing tests: printing/setPrinting.html printing/page-rule-in-media-query.html fast/css/font-face-default-font.html printing/width-overflow.html printing/compositing-layer-printing.html fast/css/fontloader-tab-index.html
Build Bot
Comment 8
2017-06-19 22:08:34 PDT
Created
attachment 313364
[details]
Archive of layout-test-results from ews116 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 9
2017-06-19 22:11:07 PDT
Comment on
attachment 313356
[details]
Patch
Attachment 313356
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/3964071
New failing tests: printing/setPrinting.html printing/page-rule-in-media-query.html fast/css/font-face-default-font.html printing/width-overflow.html printing/compositing-layer-printing.html fast/css/fontloader-tab-index.html
Build Bot
Comment 10
2017-06-19 22:11:08 PDT
Created
attachment 313365
[details]
Archive of layout-test-results from ews100 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 11
2017-06-22 21:53:20 PDT
These test failures are because of the m_isComputingRootStyleFont hack that Antti added in
https://bugs.webkit.org/show_bug.cgi?id=163721
Myles C. Maxfield
Comment 12
2017-06-22 22:40:50 PDT
#15 0x0000000106bcf459 in WebCore::Style::Scope::resolver() at /Users/litherum/src/WebKit/Source/WebCore/style/StyleScope.cpp:100 #16 0x0000000104b1925b in WebCore::DocumentRuleSets::userStyle() const at /Users/litherum/src/WebKit/Source/WebCore/css/DocumentRuleSets.cpp:54 #17 0x0000000104b1a1c8 in WebCore::DocumentRuleSets::collectFeatures() const at /Users/litherum/src/WebKit/Source/WebCore/css/DocumentRuleSets.cpp:125 #18 0x0000000104b1a01d in WebCore::DocumentRuleSets::appendAuthorStyleSheets(WTF::Vector<WTF::RefPtr<WebCore::CSSStyleSheet>, 0ul, WTF::CrashOnOverflow, 16ul> const&, WebCore::MediaQueryEvaluator*, WebCore::InspectorCSSOMWrappers&, WebCore::StyleResolver*) at /Users/litherum/src/WebKit/Source/WebCore/css/DocumentRuleSets.cpp:110 #19 0x0000000106ba3199 in WebCore::StyleResolver::appendAuthorStyleSheets(WTF::Vector<WTF::RefPtr<WebCore::CSSStyleSheet>, 0ul, WTF::CrashOnOverflow, 16ul> const&) at /Users/litherum/src/WebKit/Source/WebCore/css/StyleResolver.cpp:285 #20 0x0000000106bcf939 in WebCore::Style::Scope::resolver() at /Users/litherum/src/WebKit/Source/WebCore/style/StyleScope.cpp:111
Myles C. Maxfield
Comment 13
2017-06-22 22:47:45 PDT
Created
attachment 313690
[details]
Patch
Build Bot
Comment 14
2017-06-22 23:22:51 PDT
Comment on
attachment 313690
[details]
Patch
Attachment 313690
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/3982176
New failing tests: printing/compositing-layer-printing.html printing/page-rule-in-media-query.html printing/width-overflow.html printing/setPrinting.html
Build Bot
Comment 15
2017-06-22 23:22:53 PDT
Created
attachment 313691
[details]
Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 16
2017-06-22 23:52:27 PDT
Comment on
attachment 313690
[details]
Patch
Attachment 313690
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/3982270
New failing tests: printing/compositing-layer-printing.html fast/css/scrollbar-dynamic-style-change.html printing/page-rule-in-media-query.html printing/width-overflow.html printing/setPrinting.html
Build Bot
Comment 17
2017-06-22 23:52:28 PDT
Created
attachment 313695
[details]
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 18
2017-06-23 00:16:13 PDT
Comment on
attachment 313690
[details]
Patch
Attachment 313690
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3982318
New failing tests: printing/compositing-layer-printing.html printing/page-rule-in-media-query.html printing/width-overflow.html printing/setPrinting.html
Build Bot
Comment 19
2017-06-23 00:16:15 PDT
Created
attachment 313696
[details]
Archive of layout-test-results from ews114 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Antti Koivisto
Comment 20
2017-07-05 09:29:54 PDT
Created
attachment 314610
[details]
patch
Andreas Kling
Comment 21
2017-07-05 10:24:54 PDT
Comment on
attachment 314610
[details]
patch r=me
Antti Koivisto
Comment 22
2017-07-05 10:54:56 PDT
Created
attachment 314619
[details]
patch
WebKit Commit Bot
Comment 23
2017-07-05 12:53:59 PDT
Comment on
attachment 314619
[details]
patch Clearing flags on attachment: 314619 Committed
r219145
: <
http://trac.webkit.org/changeset/219145
>
WebKit Commit Bot
Comment 24
2017-07-05 12:54:02 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 25
2017-09-01 17:40:05 PDT
This caused
bug 176260
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug