Source/WebCore/css/CSSFontSelector.h
@@ -63,6 +63,7 @@ public:
     RefPtr<Font> fallbackFontAt(const FontDescription&, size_t) final;
 
     void clearDocument();
+    void emptyCaches();
     void buildStarted();
     void buildCompleted();
 
@@ -82,7 +83,8 @@ public:
 
     FontFaceSet& fontFaceSet();
 
-    void setIsComputingRootStyleFont(bool value) { m_isComputingRootStyleFont = value; }
+    void incrementIsComputingRootStyleFont() { ++m_computingRootStyleFontCount; }
+    void decrementIsComputingRootStyleFont() { --m_computingRootStyleFontCount; }
 
 private:
     explicit CSSFontSelector(Document&);
@@ -111,9 +113,9 @@ private:
 
     unsigned m_uniqueId;
     unsigned m_version;
+    unsigned m_computingRootStyleFontCount { 0 };
     bool m_creatingFont { false };
     bool m_buildIsUnderway { false };
-    bool m_isComputingRootStyleFont { false };
 };
 
 } // namespace WebCore
